fix missing borders when printing

--- a/src/App.css
+++ b/src/App.css
@@ -268,6 +268,9 @@ li {
 		max-width: unset;
 		box-shadow: none;
 	}
+}
+
+@media only screen and (max-width: 830px) {
 
 	.division-main-date {
 		border: 0;
